# mis-apps-panel

./: .gitignore  package.json  panel-apps.html
.github/workflows/: build-windows.yml
frontend/: panel-apps.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
